--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <a-scene>
-      <a-sphere color="0000"></a-sphere>
+      <a-sphere color="red" positon="0 1.5 -2"></a-sphere>
     </a-scene>
   </body>
 </html>
