fix script source and errors

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script>
       https://cdnjs.cloudflare.com/ajax/libs/aframe/1.0.4/aframe.js
     </script>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-sphere color="red" positon="0 1.5 -2"></a-sphere>
+      <a-sphere color="red" position="0 1.5 -2"></a-sphere>
     </a-scene>
   </body>
 </html>
