--- a/index.html
+++ b/index.html
@@ -1,17 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A-Frame_1</title>
-    <script>
-      https://cdnjs.cloudflare.com/ajax/libs/aframe/1.0.4/aframe.js
-    </script>
+    <meta charset="utf-8" />
+    <title>Hello, WebVR! • A-Frame</title>
+    <meta name="description" content="A-Frame_1" />
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
-    <a-scene>
-      <a-sphere color="red" position="0 1.5 -2"></a-sphere>
+    <a-scene background="color: #FAFAFA">
+      <a-box
+        position="-1 0.5 -3"
+        rotation="0 45 0"
+        color="#4CC3D9"
+        shadow
+      ></a-box>
+      <a-sphere
+        position="0 1.25 -5"
+        radius="1.25"
+        color="#EF2D5E"
+        shadow
+      ></a-sphere>
+      <a-cylinder
+        position="1 0.75 -3"
+        radius="0.5"
+        height="1.5"
+        color="#FFC65D"
+        shadow
+      ></a-cylinder>
+      <a-plane
+        position="0 0 -4"
+        rotation="-90 0 0"
+        width="4"
+        height="4"
+        color="#7BC8A4"
+        shadow
+      ></a-plane>
     </a-scene>
   </body>
 </html>
